--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
 	<title>Password Regeneration Form</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel='icon' type='image/png' href='/favicon.webp'>
 	<link rel='stylesheet' href='/bundle.css'>
 
 	<script defer src='/bundle.js'></script>
