--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width'>
+	<meta name="Description" content="Password Regeneration Form">
 
 	<title>Password Regeneration Form</title>
 
