Add comexposiumConnect to thankyou component

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 	<link rel='stylesheet' href='/bundle.css'>
 
 	<script defer src='/bundle.js'></script>
+	<script defer src="https://connect.prod.comexposium-webservices.com/js/loader.min.js"></script>
+
 </head>
 
 <body>
